--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,12 @@
 
 buildscript {
     ext {
+        kotlinVersion = '1.3.41'
         buildToolsVersion = "29.0.2"
-        minSdkVersion = 21
+        minSdkVersion = 26
         compileSdkVersion = 29
         targetSdkVersion = 29
+        multiDexEnabled = true
     }
     repositories {
         google()
@@ -13,6 +15,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.5.3")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,6 +28,9 @@ allprojects {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
+        }
+        maven {
+            url "$rootDir/../node_modules/detox/Detox-android"
         }
         maven {
             // Android JSC is installed from npm
