--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest --watchAll"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "react-native"
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
@@ -39,15 +39,34 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "babel-jest": "~25.2.6",
     "detox": "^18.9.0",
+    "jasmine": "^3.7.0",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "jest-expo": "~40.0.0",
-    "typescript": "~4.0.0",
-    "babel-jest": "~25.2.6",
-    "react-test-renderer": "~16.13.1"
+    "react-test-renderer": "~16.13.1",
+    "typescript": "~4.0.0"
   },
   "private": true,
   "name": "ejectedExpoDetoxAndroid",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "detox": {
+    "testRunner": "jest",
+    "runnerConfig": "e2e/config.json",
+    "configurations": {
+      "ios": {
+        "device": "simulator",
+        "app": "ios"
+      },
+      "android": {
+        "device": "emulator",
+        "app": "android",
+        "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
+        "build": "cd android; ./gradlew clean; ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release; cd ..",
+        "type": "android.attached",
+        "name": "Pixel_2_API_29"
+      }
+    }
+  }
 }
