--- a/e2e/config.json
+++ b/e2e/config.json
@@ -1,7 +1,7 @@
 {
-    "setupFilesAfterEnv": ["./init.js"],
-    "testRunner": "jest-circus/runner",
     "testEnvironment": "./environment",
+    "testRunner": "jest-circus/runner",
+    "testTimeout": 120000,
     "testRegex": "\\.e2e\\.js$",
     "reporters": ["detox/runners/jest/streamlineReporter"],
     "verbose": true
