--- a/e2e/config.json
+++ b/e2e/config.json
@@ -1,6 +1,6 @@
 {
-    "testEnvironment": "./environment",
-    "testRunner": "jest-circus/runner",
+    "setupFilesAfterEnv": ["./init.js"],
+    "testEnvironment": "node",
     "testTimeout": 120000,
     "testRegex": "\\.e2e\\.js$",
     "reporters": ["detox/runners/jest/streamlineReporter"],
