--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "expo-constants": "~9.3.0",
     "expo-font": "~8.4.0",
     "expo-linking": "~2.0.0",
+    "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "~8.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -42,6 +44,7 @@
     "jasmine": "^3.7.0",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
+    "jest-expo": "~40.0.0",
     "react-test-renderer": "~16.13.1",
     "typescript": "~4.0.0"
   },
